--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#1B5E20</color>
     <color name="colorPrimaryDark">#003300</color>
     <color name="colorAccent">#4C8C4A</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
