--- a/app/src/main/res/layout/list_item_announcement.xml
+++ b/app/src/main/res/layout/list_item_announcement.xml
@@ -21,7 +21,8 @@
             android:layout_width="@dimen/list_item_announcement_width"
             android:layout_height="@dimen/list_item_announcement_height"
             android:contentDescription="@string/content_description_list_item_announcement_thumbnail"
-            android:src="@drawable/ic_photo_camera_black_24dp"
+            app:imageUrl="@{announcement.photos}"
+            android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,50 +32,60 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            style="@style/ListItemTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacer4"
             android:layout_marginLeft="@dimen/spacer4"
             android:text="@{announcement.title}"
-            tools:text="@string/label_announcement_title"
+            app:layout_constraintStart_toEndOf="@id/thumbnail"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/thumbnail"/>
+            tools:text="Livre de poche Chapsal Le charme des liaisons" />
 
         <TextView
             android:id="@+id/price"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(announcement.price)}"
+            style="@style/ListItemPrice"
+            app:amount="@{announcement.price}"
             tools:text="@string/label_announcement_price"
             app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintStart_toStartOf="@id/title"/>
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/category"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/ListItemCategory"
             android:text="@{announcement.category.name}"
             tools:text="@string/label_announcement_category"
             app:layout_constraintTop_toBottomOf="@id/price"
-            app:layout_constraintStart_toStartOf="@id/title"/>
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/city"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/ListItemLocation"
             android:text="@{announcement.city.name}"
             tools:text="@string/label_announcement_city"
             app:layout_constraintTop_toBottomOf="@id/category"
-            app:layout_constraintStart_toStartOf="@id/title"/>
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/creationDate"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@{announcement.creationDate.toString()}"
+            style="@style/ListItemDate"
+            app:date="@{announcement.creationDate}"
             tools:text="@string/label_announcement_creation_date"
             app:layout_constraintTop_toBottomOf="@id/city"
-            app:layout_constraintStart_toStartOf="@id/title"/>
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
