--- a/app/src/main/res/drawable/list_item_bottom_line.xml
+++ b/app/src/main/res/drawable/list_item_bottom_line.xml
@@ -12,7 +12,7 @@
 
             <stroke
                 android:width="1dp"
-                android:color="#757575"/>
+                android:color="@color/colorUltraLightGrey"/>
         </shape>
     </item>
 </layer-list>
