feat(announcement): add sw600 support

--- a/app/src/main/res/layout/fragment_list_announcement.xml
+++ b/app/src/main/res/layout/fragment_list_announcement.xml
@@ -5,12 +5,21 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/list_item_announcement_padding_top"
+        android:paddingStart="@dimen/list_item_announcement_padding"
+        android:paddingLeft="@dimen/list_item_announcement_padding"
+        android:paddingEnd="@dimen/list_item_announcement_padding"
+        android:paddingRight="@dimen/list_item_announcement_padding">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:scrollbarStyle="outsideOverlay"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"/>
 
         <include
             android:id="@+id/networkErrorHolder"
