--- a/app/src/main/res/layout/transparent_app_bar.xml
+++ b/app/src/main/res/layout/transparent_app_bar.xml
@@ -7,6 +7,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="@color/colorAppBarTransparency"
+        app:elevation="@dimen/spacer1"
         android:fitsSystemWindows="true">
 
         <androidx.appcompat.widget.Toolbar
