--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -8,4 +8,8 @@
     <!--spacers-->
 
     <!--font sizes-->
+
+    <!--announcement-->
+    <dimen name="announcement_details_image_height">400dp</dimen>
+    <dimen name="announcement_details_padding">@dimen/spacer16</dimen>
 </resources>
