--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,6 +47,12 @@
     <style name="headline.text"><item name="android:textColor">@color/colorBlack</item></style>
     <style name="headline.text.bold"><item name="android:textStyle">bold</item></style>
 
+    <style name="display1"><item name="android:textSize">@dimen/material_text_display1</item></style>
+    <style name="display1.main"><item name="android:textColor">@color/colorPrimary</item></style>
+    <style name="display1.main.bold"><item name="android:textStyle">bold</item></style>
+    <style name="display1.text"><item name="android:textColor">@color/colorBlack</item></style>
+    <style name="display1.text.bold"><item name="android:textStyle">bold</item></style>
+
     <style name="ListItemTitle" parent="subhead.text.medium">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
