fix: pass announcement uuid
- include add package for announcement list logic
- include remove unused imports
- include rearrange imports
- include improve network error holder

--- a/app/src/main/res/layout/fragment_announcement_details.xml
+++ b/app/src/main/res/layout/fragment_announcement_details.xml
@@ -24,6 +24,7 @@
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/contentHolder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/spacer4">
