--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorLight">#707070</color>
+    <color name="colorRed">#F44336</color>
     <color name="colorUltraLightGrey">#EFEFEF</color>
     <color name="colorAppBarTransparency">#10000000</color>
 </resources>
