feat: add login ui, no business code

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,16 @@
     <color name="colorAccent">#4C8C4A</color>
     <color name="colorTransparentBlack">#FFFFFFFF</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorLight">#707070</color>
     <color name="colorRed">#F44336</color>
     <color name="colorUltraLightGrey">#EFEFEF</color>
     <color name="colorAppBarTransparency">#10000000</color>
+    <color name="colorRedTransparent">#2CFA365C</color>
+    <color name="colorDarkGrey">#2b3338</color>
+    <color name="grey">#737A80</color>
+    <color name="colorLightGrey">#a6a6a6</color>
+    <color name="colorSilver">#EEEEEE</color>
+    <color name="colorSilverDark">#dee1e4</color>
 </resources>
