--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,8 @@
     <dimen name="spacer1">4dp</dimen>
     <dimen name="spacer2">8dp</dimen>
     <dimen name="spacer4">16dp</dimen>
+    <dimen name="spacer6">24dp</dimen>
+    <dimen name="spacer12">48dp</dimen>
     <dimen name="spacer16">64dp</dimen>
 
     <dimen name="progress_bar_size">125dp</dimen>
