--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,4 +104,39 @@
     <style name="DetailsItemDescription" parent="body1.text">
         <item name="android:lineSpacingExtra">5dp</item>
     </style>
+
+    <style name="ButtonPrimary" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">@dimen/material_text_button</item>
+        <item name="android:background">@drawable/bg_selector_positive_button</item>
+    </style>
+
+    <style name="ButtonSecondary" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/colorRed</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/material_text_button</item>
+        <item name="android:background">@drawable/bg_negative_button</item>
+    </style>
+
+    <style name="EditText" parent="Widget.AppCompat.EditText">
+        <item name="colorControlNormal">@color/colorTransparent</item>
+        <item name="colorControlActivated">@color/colorTransparent</item>
+        <item name="colorControlHighlight">@color/colorTransparent</item>
+        <item name="android:paddingLeft">@dimen/spacer4</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColorHint">@color/colorLightGrey</item>
+        <item name="android:textSize">@dimen/material_text_subhead</item>
+        <item name="android:inputType">textEmailAddress|textNoSuggestions</item>
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:background">@drawable/bg_edittext</item>
+    </style>
+
+    <style name="EditTextPassword" parent="EditText">
+        <item name="android:inputType">text|textPassword</item>
+    </style>
 </resources>
