feat: add default fragment for left tabs

--- a/app/src/main/res/drawable/bg_negative_button.xml
+++ b/app/src/main/res/drawable/bg_negative_button.xml
@@ -8,5 +8,5 @@
         android:color="@color/colorRed"/>
 
     <corners
-        android:radius="4dp"/>
+        android:radius="@dimen/spacer4"/>
 </shape>
