--- a/app/src/main/res/drawable/bg_edittext.xml
+++ b/app/src/main/res/drawable/bg_edittext.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:drawable="@drawable/bg_round_silver"
-        android:state_active="false" />
+<selector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:drawable="@drawable/bg_round_red_transparent"
-        android:state_active="true"/>
+        app:state_error="true" />
+    <item
+        android:drawable="@drawable/bg_round_silver"
+        app:state_error="false" />
 </selector>
