--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -105,6 +105,11 @@
         <item name="android:lineSpacingExtra">5dp</item>
     </style>
 
+    <style name="CommonMessageSuccess" parent="headline.main.bold">
+        <item name="android:lineSpacingExtra">5dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="ButtonPrimary" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps">false</item>
@@ -135,6 +140,11 @@
     <style name="EditTextEmail" parent="EditText">
         <item name="android:inputType">textEmailAddress|textNoSuggestions</item>
     </style>
+
+    <style name="EditTextPhoneNumber" parent="EditText">
+        <item name="android:inputType">phone</item>
+    </style>
+
     <style name="EditTextPassword" parent="EditText">
         <item name="android:inputType">text|textPassword</item>
     </style>
