--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,7 @@
 
     <style name="body1"><item name="android:textSize">@dimen/material_text_body1</item></style>
     <style name="body1.text"><item name="android:textColor">@color/colorBlack</item></style>
+    <style name="body1.red"><item name="android:textColor">@color/colorRed</item></style>
 
     <style name="body2"><item name="android:textSize">@dimen/material_text_body2</item></style>
     <style name="body2.main"><item name="android:textColor">@color/colorPrimary</item></style>
