--- a/app/src/main/res/layout/fragment_favorite_details.xml
+++ b/app/src/main/res/layout/fragment_favorite_details.xml
@@ -138,8 +138,7 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="@dimen/progress_bar_size"
-            android:layout_height="@dimen/progress_bar_size"
+            style="@style/ProgressBar"
             android:layout_gravity="center"
             android:visibility="visible"
             tools:visibility="visible" />
