--- a/app/src/main/res/layout/fragment_list_announcement.xml
+++ b/app/src/main/res/layout/fragment_list_announcement.xml
@@ -39,8 +39,7 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="@dimen/progress_bar_size"
-            android:layout_height="@dimen/progress_bar_size"
+            style="@style/ProgressBar"
             android:visibility="gone"
             tools:visibility="visible"
             android:layout_gravity="center"/>
