--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,109 +6,121 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         tools:context="com.wolasoft.maplenou.views.login.LoginFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/contentHolder"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:padding="@dimen/spacer4"
-            android:paddingTop="@dimen/spacer16">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
-            <com.wolasoft.waul.widgets.CustomEditText
-                android:id="@+id/emailEdit"
-                style="@style/EditTextEmail"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spacer12"
-                android:layout_marginTop="@dimen/spacer6"
-                android:hint="@string/login_edittext_email_hint"
-                android:inputType="textEmailAddress"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.wolasoft.waul.widgets.CustomEditText
-                android:id="@+id/passwordEdit"
-                style="@style/EditTextPassword"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spacer12"
-                android:layout_marginTop="@dimen/spacer2"
-                android:hint="@string/login_edittext_password_hint"
-                app:hintAnimationEnabled="false"
-                app:hintEnabled="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/emailEdit"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@drawable/password_toggle_color" />
-
-            <TextView
-                android:id="@+id/passwordForgottenTV"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/contentHolder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacer2"
-                android:gravity="start"
-                android:text="@string/login_message_password_forgotten_title"
-                android:textColor="@color/colorPrimary"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/passwordEdit" />
+                android:layout_gravity="center"
+                android:padding="@dimen/spacer4"
+                android:paddingTop="@dimen/spacer16">
 
-            <Button
-                android:id="@+id/loginButton"
-                style="@style/ButtonPrimary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacer6"
-                android:text="@string/login_button_login_title"
-                android:enabled="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/passwordForgottenTV" />
+                <com.wolasoft.waul.widgets.CustomEditText
+                    android:id="@+id/emailEdit"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/spacer12"
+                    style="@style/EditTextEmail"
+                    android:maxLines="1"
+                    android:layout_marginTop="@dimen/spacer6"
+                    android:hint="@string/login_edittext_email_hint"
+                    android:inputType="textEmailAddress"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/errorTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/body1.red"
-                tools:text="Error"
-                android:gravity="center"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:layout_marginTop="@dimen/spacer4"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/loginButton" />
+                <com.wolasoft.waul.widgets.CustomEditText
+                    android:id="@+id/passwordEdit"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/spacer12"
+                    style="@style/EditTextPassword"
+                    android:maxLines="1"
+                    android:layout_marginTop="@dimen/spacer2"
+                    android:hint="@string/login_edittext_password_hint"
+                    app:hintAnimationEnabled="false"
+                    app:hintEnabled="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/emailEdit"
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@drawable/password_toggle_color" />
 
-            <TextView
-                android:id="@+id/createAccountTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/login_message_create_account_title"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/spacer8"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/errorTV" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/passwordForgottenTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacer2"
+                    android:gravity="start"
+                    android:text="@string/login_message_password_forgotten_title"
+                    android:textColor="@color/colorPrimary"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/passwordEdit" />
+
+                <Button
+                    android:id="@+id/loginButton"
+                    style="@style/ButtonPrimary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacer6"
+                    android:text="@string/login_button_login_title"
+                    android:enabled="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/passwordForgottenTV" />
+
+                <TextView
+                    android:id="@+id/errorTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/body1.red"
+                    tools:text="Error"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    android:layout_marginTop="@dimen/spacer4"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/loginButton" />
+
+                <TextView
+                    android:id="@+id/createAccountTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login_message_create_account_title"
+                    android:gravity="center"
+                    android:layout_marginTop="@dimen/spacer8"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/errorTV" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            style="@style/ProgressBar"
             android:layout_gravity="center"
             android:visibility="gone"
             tools:visibility="visible"/>
